[package]
name = "pgx_uuidv7"
version = "0.1.1"
edition = "2021"
description = "A Postgres extension to generate and cast v7 UUIDs"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
chrono = "0.4.31"
pgrx = "0.15.0"
uuid = { version = "1.4", features = ["std", "v7"] }

[dev-dependencies]
pgrx-tests = "0.15.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
