[package]
name = "pgx_uuidv7"
version = "0.1.5"
edition = "2021"
description = "A Postgres extension to generate and cast v7 UUIDs"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pgx_uuidv7"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
chrono = "0.4.41"
pgrx = "=0.16.1"
uuid = { version = "1.17", features = ["std", "v7"] }

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
